# docs/swagger.json
@@ -1649,6 +1649,10 @@
                     "type": "string",
                     "example": ""
                 },
+                "suggestionLookaheadDays": {
+                    "type": "integer",
+                    "example": 7
+                },
                 "userID": {
                     "type": "string",
                     "example": "5581a365-394f-467d-ae13-0d01e4cf1863"
@@ -1951,6 +1955,10 @@
                 "planId": {
                     "type": "string",
                     "example": "basic"
+                },
+                "suggestionLookaheadDays": {
+                    "type": "integer",
+                    "example": 7
                 }
             }
         }
